# duoduo

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  cliff.toml  components.d.ts  index.html  menu.html  package.json  pnpm-lock.yaml  prettier.config.js  settings.html  tsconfig.json  vite.config.ts
.github/workflows/: cache-warm.yml  release.yml
docs/superpowers/plans/: 2026-06-12-segmented-action.md  2026-06-13-behavior-rotation.md  2026-06-13-clips-behaviors.md  2026-06-22-hot-update.md  2026-06-26-shortcut-gesture-merge.md  2026-07-02-release-auto-version.md
docs/superpowers/specs/: 2026-06-12-segmented-action-design.md  (+5 more)
resources/: manifest.json
scripts/: extract-changelog.mjs  package.mjs  publish-mirrors.mjs  release-footer.md  release.mjs
src/: App.vue  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  settings.json
src-tauri/src/: config.rs  converter.rs  downloader.rs  feedback.rs  gaze.rs  geometry.rs  icon.rs  lib.rs  main.rs  resources.rs  settings.rs  state.rs  tray.rs  updater.rs  window.rs
src/actions/: behaviors.ts  clips.ts  frames.ts  index.ts  segments.ts
src/composables/: useBasicSettings.ts  useBehavior.ts  useCatBrain.ts  useDisplaySettings.ts  useGaze.ts  useGestureConfig.ts  useGestures.ts  useMenuSettings.ts  usePetActions.ts  useSegmentedAction.ts  useShortcuts.ts  useSpeakPhrases.ts  useSpriteAnimation.ts  useTriggerBindings.ts
src/pet-core/: actionCatalog.ts  appConfig.ts  appSettings.ts  basicSettings.ts  behaviors.ts  catContext.ts  clips.ts  commands.ts  defaults.ts  displaySettings.ts  manifestCatalog.ts  menuSettings.ts  resources.ts  speakPhrases.ts  triggerBindings.ts  useBehavior.ts  useCatBrain.ts  useGaze.ts  useSpriteAnimation.ts
src/pet-window/: PetApp.vue  main.ts
src/resources/: store.ts
src/settings/: BasicSettings.vue  DisplaySettings.vue  MenuConfigCard.vue  PhraseConfigDialog.vue  ResourceSettings.vue  SettingsApp.vue  ShortcutSettings.vue  main.ts  settings.css
src/types/: components.d.ts
video-to-webp/: README.md  install.bat  requirements.txt  run.bat  video_to_webp.py
(+35 files in other folders)
