[package]
name = "duoduo"
version = "0.1.0"
description = "A desktop pet"
authors = ["you"]
edition = "2021"

[lib]
name = "duoduo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse"] }
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-global-shortcut = "2"
base64 = "0.22"
